media styles test

--- a/node-content-renderer.scss
+++ b/node-content-renderer.scss
@@ -5,12 +5,12 @@
 
   &:hover {
     opacity: 0.7;
-      & div > div > ul > li > a {
+      & div > div > div > ul > li > a {
           display: block !important;
       }
-    & div > div > div > a {
-      display: block !important;
-    }
+    //& div > div > div > div > a {
+    //  display: block !important;
+    //}
   }
 
   &:active {
@@ -27,7 +27,7 @@
 }
 
 .row {
-  height: 100%;
+  height: 20px;
   white-space: pre;
   display: flex;
   position: relative;
@@ -99,7 +99,7 @@
   flex: 1 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: start;
 }
 
 .rowLabel {
@@ -356,4 +356,49 @@ $highlight-line-size: 6px; // Make it an even number for clean rendering
   background-color: blue!important;
   color: white!important;
   opacity: 0.7;
+}
+
+@media (min-width: 1000px) {
+  .rowWrapper {
+    &:hover {
+      & div > div > div > ul > .counter {
+        display: none;
+      }
+    }
+  }
+  .toolbarButton {
+    margin-right: 14px;
+  }
+  .toolbarButtonHelper {
+    width: 100%;
+  }
+  .rowWidth {
+    width: 100%;
+  }
+  .actionBtnList {
+    display: contents;
+  }
+}
+
+.actionsContainer {
+  //position: relative;
+  //display: inline-block;
+  position: relative;
+  display: flex;
+  width: 100%;
+  padding: 0.8em 0.4em;
+  margin-right: 8px;
+  justify-content: flex-end;
+}
+
+.actionBtnList {
+  @extend .actionsContainer;
+  position: absolute;
+  right: 0px;
+  display: contents;
+  list-style: none;
+}
+
+.actionListItem {
+  margin-top: 4px;
 }
